--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     ]
   },
   "dependencies": {
+    "browser-or-node": "^1.3.0",
     "eventemitter3": "^3.1.0",
     "ramda.clone": "^0.26.1",
     "script-loader": "^0.7.0",
